--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <h2 class="display-3 text-primary fw-bold ps-5 ms-5">活動說明</h2>
         <main class="d-flex justify-content-center">
             <div class="card text-white bg-transparent mb-3" style="max-width: 18rem;">
-            <div class="card-header">Header</div>
+            <div class="card-header text-primary fw-normal">Step01</div>
             <div class="card-body">
                 <img src="images/step1_pic.png" class="card-img" alt="week2">
               <h5 class="card-title">Primary card title</h5>
