--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header class="d-flex justify-content-between p-3">
+    <header class="d-flex justify-content-between">
         <h1>
             <a href="#">
                 <img src="images/the f2e 2.png" alt="the f2e logo">
@@ -38,24 +38,79 @@
     </section>
 
     <!-- 網頁區塊 2 ：提出問題 ****************************************** -->
-    <section class="m-5">
+    <section class="section2 d-flex flex-column m-5">
         <h2 class="display-1 text-primary text-center fw-bold">你是否也有以下困擾？</h2>
-        <div class="troubled container-xxl position-relative mt-5">
-            <figure class="f-img position-absolute top-0 start-0 toBig">
-                <img src="images/Property 3.svg" alt="">
+        <div class="troubled container-xxl position-relative pt-5">
+            <figure class="position-absolute top-0 start-0 ani-toBig">
+                <img src="images/Property 3.svg" alt="" class="w-100">
             </figure>
-            <figure class="f-img position-absolute top-middle end-0 toBig">
-                <img src="images/Property2 .svg" alt="">
+            <figure class="position-absolute top-middle end-0 ani-toBig">
+                <img src="images/Property2 .svg" alt="" class="w-100">
             </figure>
-            <figure class="f-img position-absolute start-0 bottom-0 toBig">
-                <img src="images/Property 1.svg" alt="">
+            <figure class="position-absolute start-0 bottom-0 ani-toBig">
+                <img src="images/Property 1.svg" alt="" class="w-100">
             </figure>
         </div>
     </section>
 
     <!-- 網頁區塊 3：破題&背景文字卯馬燈 ****************************************** -->
-    <section class="overflow-hidden my-6">
-        <ul class="loop p-0 mw-100">
+    <section class="overflow-hidden my-6 px-0" style="height: 100vh;box-sizing: border-box;">
+        <div class="mar">
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                <img src="images/Interactive Web design.png" alt="">
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <img src="images/Interactive Web design.png" alt="">
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                <img src="images/Interactive Web design.png" alt="">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <img src="images/Interactive Web design.png" alt="">
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                <img src="images/Interactive Web design.png" alt="">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <img src="images/Interactive Web design.png" alt="">
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                <img src="images/Interactive Web design.png" alt="">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <img src="images/Interactive Web design.png" alt="">
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                <img src="images/Interactive Web design.png" alt="">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <img src="images/Interactive Web design.png" alt="">
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                <img src="images/Interactive Web design.png" alt="">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <img src="images/Interactive Web design.png" alt="">
+            </marquee>
+            <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
+                <img src="images/Interactive Web design.png" alt="">
+                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+            </marquee>
+
+        </div>
+        <!-- <ul class="loop p-0 mw-100">
             <li><span>Interactive Web design</span><span>　　　</span><span>Interactive Web
                     design</span><span>　　　　</span><span>Interactive Web design</span><span>　　　</span>
             </li>
@@ -75,14 +130,12 @@
             </li>
             <li><span>Interactive Web design</span><span>　　　</span><span>Interactive Web design</span><span>　　　　</span>
             </li>
-
-
-        </ul>
+        </ul> -->
     </section>
 
     <!-- 網頁區塊 4：三大主題****************************************** -->
-    <section class="my-6 pt-5">
-        <h2 class="display-1 text-primary fw-bold pt-5 ms-5">年度最強合作，三大主題來襲</h2>
+    <section class="section4 my-6">
+        <h2 class="display-1 text-primary fw-bold ms-5">年度最強合作，三大主題來襲</h2>
         <p class="h1 text-info text-center fw-bold my-5">各路廠商強強聯手，共同設計出接地氣的網頁互動挑戰關卡</p>
 
         <main class="d-flex justify-content-center">
@@ -99,8 +152,8 @@
     </section>
 
     <!-- 網頁區塊 5： 活動說明 ****************************************** -->
-    <section class="my-6  text-center ">
-        <h2 class="display-1 text-primary fw-bold pt-5 ZigZag">活動說明
+    <section class="text-center my-6  ">
+        <h2 class="display-1 text-primary fw-bold ZigZag">活動說明
             <span class="d-block p-0"><img src="images/Icon/Zig Zag.svg" alt=""></span>
         </h2>
         <main class="d-flex justify-content-around">
@@ -157,43 +210,50 @@
 
     <!-- 網頁區塊 6：獎項設計 ****************************************** -->
     <section class="section6 text-center">
-        <h2 class="display-1 text-white fw-bold pt-5 ">區區修煉已經無法滿足了嗎？<br />
+        <h2 class="display-1 text-white fw-bold">區區修煉已經無法滿足了嗎？<br />
             還有比賽等著你！</h2>
-        <div class="card trophy-card-bg py-4 px-5 rounded-20 position-relative" style="width: 700px;height: 410px;">
-            <div class="card-header trophy-card-bg rounded-20 position-absolute h1 fw-bold ">
-                <h5 class="card-title bg-white rounded-20">評審機制</h5>
+
+        <main class="card-item position-relative">
+            <div class="card trophy-card-bg rounded-20 py-4 px-5 m-3" style="height: 410px;">
+                <div
+                    class="card-body d-flex flex-column justify-content-center position-relative bg-white rounded-20 h3 fw-bold text-start">
+                    <h5 class="card-title position-absolute trophy-card-bg h2 fw-bold rounded-20">
+                        <span class="bg-white rounded-20">評審機制</span>
+                    </h5>
+                    <p class="card-text ">初選：將由六角學院前端、UI 評審進行第一波篩選。</p>
+                    <p class="card-text">決選：由六角學院與贊助廠商討論，進行最後篩選，並於 12/30(五) 由評審進行直播公布名單！</p>
+                </div>
             </div>
-            <div class="card-body d-flex flex-column justify-content-center bg-white rounded-20  h3 fw-bold text-start">
-                <p class="card-text ">初選：將由六角學院前端、UI 評審進行第一波篩選。</p>
-                <p class="card-text">決選：由六角學院與贊助廠商討論，進行最後篩選，並於 12/30(五) 由評審進行直播公布名單！</p>
+            <div class="card trophy-card-bg rounded-20 py-4 px-5 m-3" style="height: 410px;">
+                <div
+                    class="card-body d-flex flex-column justify-content-center position-relative bg-white rounded-20 h3 fw-bold text-start">
+                    <h5 class="card-title position-absolute trophy-card-bg h2 fw-bold rounded-20">
+                        <span class="bg-white rounded-20">獎項設計</span>
+                    </h5>
+                    <ul
+                        class="d-flex flex-column justify-content-center list-group-disc h3 fw-bold text-start mt-auto h-100">
+                        <li>初選佳作 共六十位 <span class="text-danger"> 數位獎狀</span></li>
+                        <li>個人企業獎 共六位 <span class="text-danger"> NTD 3,000/位</span></li>
+                        <li>團體企業獎 共三組 <span class="text-danger"> NTD 10,000/組</span></li>
+                        <li>以上皆提供完賽<span class="text-danger"> 數位獎狀</span></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="card trophy-card-bg py-4 px-5 rounded-20 position-relative" style="width: 700px;height: 410px;">
-            <div class="card-header trophy-card-bg rounded-20 position-absolute h1 fw-bold">
-                <h5 class="card-title bg-white rounded-20">獎項設計</h5>
-            </div>
-            <div class="card-body bg-white rounded-20">
-                <ul
-                    class="d-flex flex-column justify-content-center list-group-disc h3 fw-bold text-start mt-auto h-100">
-                    <li>初選佳作 共六十位 <span class="text-danger"> 數位獎狀</span></li>
-                    <li>個人企業獎 共六位 <span class="text-danger"> NTD 3,000/位</span></li>
-                    <li>團體企業獎 共三組 <span class="text-danger"> NTD 10,000/組</span></li>
-                    <li>以上皆提供完賽<span class="text-danger"> 數位獎狀</span></li>
-                </ul>
-            </div>
-        </div>
+        </main>
 
     </section>
 
 
     <!-- 網頁區塊 7：贊助單位 ****************************************** -->
-    <section class="section7 text-center position-relative px-0">
-        <img src="images/Icon/Vector.png" alt="" class="card-img">
+    <section class="section7 text-center position-relative py-5 px-0">
+        <div class="pic">
+            <img src="images/Icon/Vector.png" alt="">
+        </div>
         <main>
-            <h2 class="display-1 text-primary fw-bold pt-5 ms-5 ZigZag">鑽石級贊助商
+            <h2 class="display-1 text-primary fw-bold py-4 ms-5 ZigZag">鑽石級贊助商
                 <span class="d-block p-0"><img src="images/Icon/Zig Zag.svg" alt=""></span>
             </h2>
-            <div class="d-flex justify-content-evenly align-items-center flex-fill p-5 mt-5">
+            <div class="d-flex justify-content-evenly align-items-center flex-fill py-5 my-5">
                 <div class="pic"><img src="images/Ellipse 8.png" alt="KDAN"></div>
                 <div class="pic"><img src="images/titan_logo 1.png" alt="鈦坦科技"></div>
                 <div class="pic"><img src="images/blockstudio_logo.png" alt="板塊設計"></div>
@@ -206,15 +266,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
+    <!-- js**************************************************************** -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
