--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <title>The F2E 活動網站設計</title>
-    <link rel="stylesheet" href="style/css/bootstrap.css">
     <link rel="stylesheet" href="style/css/all.css">
 
 </head>
@@ -39,7 +38,7 @@
 
     <!-- 網頁區塊 2 ：提出問題 ****************************************** -->
     <section class="section2 d-flex flex-column m-5">
-        <h2 class="display-1 text-primary text-center fw-bold">你是否也有以下困擾？</h2>
+        <h2 class="display-2 text-primary text-center fw-bold">你是否也有以下困擾？</h2>
         <div class="troubled container-xxl position-relative pt-5">
             <figure class="position-absolute top-0 start-0 ani-toBig">
                 <img src="images/Property 3.svg" alt="" class="w-100">
@@ -135,10 +134,10 @@
 
     <!-- 網頁區塊 4：三大主題****************************************** -->
     <section class="section4 my-6">
-        <h2 class="display-1 text-primary fw-bold ms-5">年度最強合作，三大主題來襲</h2>
+        <h2 class="display-2 text-primary fw-bold ms-5">年度最強合作，三大主題來襲</h2>
         <p class="h1 text-info text-center fw-bold my-5">各路廠商強強聯手，共同設計出接地氣的網頁互動挑戰關卡</p>
 
-        <main class="d-flex justify-content-center">
+        <main class="d-flex flex-column flex-md-row justify-content-center">
             <div class="card bg-transparent p-0">
                 <img src="images/Type=week1, Status=Default.png" class="card-img" alt="week1">
             </div>
@@ -153,7 +152,7 @@
 
     <!-- 網頁區塊 5： 活動說明 ****************************************** -->
     <section class="text-center my-6  ">
-        <h2 class="display-1 text-primary fw-bold ZigZag">活動說明
+        <h2 class="display-2 text-primary fw-bold ZigZag">活動說明
             <span class="d-block p-0"><img src="images/Icon/Zig Zag.svg" alt=""></span>
         </h2>
         <main class="d-flex justify-content-around">
@@ -210,28 +209,25 @@
 
     <!-- 網頁區塊 6：獎項設計 ****************************************** -->
     <section class="section6 text-center">
-        <h2 class="display-1 text-white fw-bold">區區修煉已經無法滿足了嗎？<br />
+        <h2 class="display-2 text-white fw-bold">區區修煉已經無法滿足了嗎？<br />
             還有比賽等著你！</h2>
 
-        <main class="card-item position-relative">
-            <div class="card trophy-card-bg rounded-20 py-4 px-5 m-3" style="height: 410px;">
-                <div
-                    class="card-body d-flex flex-column justify-content-center position-relative bg-white rounded-20 h3 fw-bold text-start">
-                    <h5 class="card-title position-absolute trophy-card-bg h2 fw-bold rounded-20">
-                        <span class="bg-white rounded-20">評審機制</span>
+        <main class="position-relative mt-5">
+            <div class="card trophy-card-bg rounded-20">
+                <div class="card-body position-relative d-flex flex-column justify-content-center rounded-20 bg-white">
+                    <h5 class="card-title position-absolute top-0 start-0 fs-2 fw-bold rounded-20">
+                        <span class="d-block bg-white rounded-20">評審機制</span>
                     </h5>
-                    <p class="card-text ">初選：將由六角學院前端、UI 評審進行第一波篩選。</p>
-                    <p class="card-text">決選：由六角學院與贊助廠商討論，進行最後篩選，並於 12/30(五) 由評審進行直播公布名單！</p>
+                    <p class="card-text text-start fs-4">初選：將由六角學院前端、UI 評審進行第一波篩選。</p>
+                    <p class="card-text text-start fs-4">決選：由六角學院與贊助廠商討論，進行最後篩選，並於 12/30(五) 由評審進行直播公布名單！</p>
                 </div>
             </div>
-            <div class="card trophy-card-bg rounded-20 py-4 px-5 m-3" style="height: 410px;">
-                <div
-                    class="card-body d-flex flex-column justify-content-center position-relative bg-white rounded-20 h3 fw-bold text-start">
-                    <h5 class="card-title position-absolute trophy-card-bg h2 fw-bold rounded-20">
-                        <span class="bg-white rounded-20">獎項設計</span>
+            <div class="card trophy-card-bg rounded-20">
+                <div class="card-body position-relative d-flex flex-column justify-content-center text-start rounded-20  bg-white">
+                    <h5 class="card-title position-absolute top-0 end-0 fs-2 fw-bold rounded-20">
+                        <span class="d-block bg-white rounded-20">獎項設計</span>
                     </h5>
-                    <ul
-                        class="d-flex flex-column justify-content-center list-group-disc h3 fw-bold text-start mt-auto h-100">
+                    <ul class="d-flex flex-column justify-content-center list-group-disc text-start h-100 fs-4 fw-bold">
                         <li>初選佳作 共六十位 <span class="text-danger"> 數位獎狀</span></li>
                         <li>個人企業獎 共六位 <span class="text-danger"> NTD 3,000/位</span></li>
                         <li>團體企業獎 共三組 <span class="text-danger"> NTD 10,000/組</span></li>
@@ -250,7 +246,7 @@
             <img src="images/Icon/Vector.png" alt="">
         </div>
         <main>
-            <h2 class="display-1 text-primary fw-bold py-4 ms-5 ZigZag">鑽石級贊助商
+            <h2 class="display-2 text-primary fw-bold py-4 ms-5 ZigZag">鑽石級贊助商
                 <span class="d-block p-0"><img src="images/Icon/Zig Zag.svg" alt=""></span>
             </h2>
             <div class="d-flex justify-content-evenly align-items-center flex-fill py-5 my-5">
@@ -261,7 +257,6 @@
         </main>
 
     </section>
-
 
 
 
