--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <section class="section2 d-flex flex-column m-5">
         <h2 class="display-2 text-primary text-center fw-bold">你是否也有以下困擾？</h2>
         <div class="troubled container-xxl position-relative pt-5">
-            <figure class="position-absolute top-0 start-0 ani-toBig">
+            <figure class="position-absolute top-0 start-0">
                 <img src="images/Property 3.svg" alt="" class="w-100">
             </figure>
-            <figure class="position-absolute top-middle end-0 ani-toBig">
+            <figure class="position-absolute top-middle end-0">
                 <img src="images/Property2 .svg" alt="" class="w-100">
             </figure>
-            <figure class="position-absolute start-0 bottom-0 ani-toBig">
+            <figure class="position-absolute start-0 bottom-0">
                 <img src="images/Property 1.svg" alt="" class="w-100">
             </figure>
         </div>
@@ -134,69 +134,69 @@
 
     <!-- 網頁區塊 4：三大主題****************************************** -->
     <section class="section4 my-6">
-        <h2 class="display-2 text-primary fw-bold ms-5">年度最強合作，三大主題來襲</h2>
+        <h2 class="display-2 text-primary fw-bold text-center text-lg-start ms-0 ms-lg-5">年度最強合作，三大主題來襲</h2>
         <p class="h1 text-info text-center fw-bold my-5">各路廠商強強聯手，共同設計出接地氣的網頁互動挑戰關卡</p>
 
         <main class="d-flex flex-column flex-md-row justify-content-center">
-            <div class="card bg-transparent p-0">
+            <div class="card bg-transparent text-center p-0">
                 <img src="images/Type=week1, Status=Default.png" class="card-img" alt="week1">
             </div>
-            <div class="card bg-transparent p-0">
+            <div class="card bg-transparent text-center p-0">
                 <img src="images/Type=week2, Status=Default.png" class="card-img" alt="week2">
             </div>
-            <div class="card bg-transparent p-0">
+            <div class="card bg-transparent text-center p-0">
                 <img src="images/Type=week3, Status=Default.png" class="card-img" alt="week3">
             </div>
         </main>
     </section>
 
     <!-- 網頁區塊 5： 活動說明 ****************************************** -->
-    <section class="text-center my-6  ">
+    <section class="section5 text-center my-6  ">
         <h2 class="display-2 text-primary fw-bold ZigZag">活動說明
             <span class="d-block p-0"><img src="images/Icon/Zig Zag.svg" alt=""></span>
         </h2>
         <main class="d-flex justify-content-around">
-            <div class="card text-white bg-transparent mb-3 after-arrow" style="max-width: 18rem;">
+            <div class="card text-white bg-transparent mb-3" >
                 <div class="card-header h1 text-primary fw-bold">Step01</div>
                 <div class="card-body">
-                    <img src="images/step1 pic.png" class="card-img" alt="week">
-                    <h5 class="card-title h3 text-primary fw-bold pt-3 p-2">Sign up !</h5>
+                    <img src="images/step1 pic.png" class="card-img" alt="Step01">
+                    <h5 class="card-title fs-3 text-primary fw-bold pt-3 p-2">Sign up !</h5>
                     <p class="card-text ">
-                        <strong class="d-block text-center fw-bold h4"> 開放報名</strong>
+                        <strong class="d-block text-center fw-bold fs-4"> 開放報名</strong>
                         <span class="fw-normal "> 10/13~10/30
                             截止前可修改報名組別</span>
                     </p>
                 </div>
             </div>
-            <div class="card text-white bg-transparent mb-3 after-arrow" style="max-width: 18rem;">
+            <div class="card text-white bg-transparent mb-3" >
                 <div class="card-header h1 text-primary fw-bold">Step02</div>
                 <div class="card-body">
-                    <img src="images/step2 pic.png" class="card-img" alt="week">
-                    <h5 class="card-title h3 text-primary fw-bold pt-3 p-2">Start !</h5>
+                    <img src="images/step2 pic.png" class="card-img" alt="Step02">
+                    <h5 class="card-title fs-3 text-primary fw-bold pt-3 p-2">Start !</h5>
                     <p class="card-text ">
-                        <strong class="d-block text-center fw-bold h4">各組別開賽</strong>
+                        <strong class="d-block text-center fw-bold fs-4">各組別開賽</strong>
                         <span class="fw-normal "> 10/31(一) UI、團體組開賽11/7(一) 前端組開賽</span>
                     </p>
                 </div>
             </div>
-            <div class="card text-white bg-transparent mb-3 after-arrow" style="max-width: 18rem;">
+            <div class="card text-white bg-transparent mb-3" >
                 <div class="card-header h1 text-primary fw-bold">Step03</div>
                 <div class="card-body">
-                    <img src="images/step3 pic.png" class="card-img" alt="week">
-                    <h5 class="card-title h3 text-primary fw-bold pt-3 p-2">Upload !</h5>
+                    <img src="images/step3 pic.png" class="card-img" alt="Step03">
+                    <h5 class="card-title fs-3 text-primary fw-bold pt-3 p-2">Upload !</h5>
                     <p class="card-text">
-                        <strong class="d-block text-center fw-bold h4">依賽程登錄作品</strong>
+                        <strong class="d-block text-center fw-bold fs-4">依賽程登錄作品</strong>
                         <span class="fw-normal "> 10/31(一) 中午 12:00 - 11/28(一) 中午 12:00</span>
                     </p>
                 </div>
             </div>
-            <div class="card text-white bg-transparent mb-3" style="max-width: 18rem;">
+            <div class="card text-white bg-transparent mb-3" >
                 <div class="card-header h1 text-primary fw-bold">Step04</div>
                 <div class="card-body">
-                    <img src="images/step4 pic.png" class="card-img" alt="week">
-                    <h5 class="card-title h3 text-primary fw-bold pt-3 p-2">Stream !</h5>
+                    <img src="images/step4 pic.png" class="card-img" alt="Step04">
+                    <h5 class="card-title fs-3 text-primary fw-bold pt-3 p-2">Stream !</h5>
                     <p class="card-text">
-                        <strong class="d-block text-center fw-bold h4">線上直播</strong>
+                        <strong class="d-block text-center fw-bold fs-4">線上直播</strong>
                         <span class="fw-normal "> 11/3 - 11/24（每週四）</span>
                     </p>
                 </div>
