網頁區塊 4：三大主題

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h2 class="display-2 text-primary fw-bold text-center text-lg-start ms-0 ms-lg-5">年度最強合作，三大主題來襲</h2>
         <p class="h1 text-info text-center fw-bold my-5">各路廠商強強聯手，共同設計出接地氣的網頁互動挑戰關卡</p>
 
-        <main class="d-flex flex-column flex-md-row justify-content-center">
+        <main class="d-flex flex-column flex-md-row justify-content-center justify-content-md-around mx-auto">
             <div class="card bg-transparent text-center p-0">
                 <img src="images/Type=week1, Status=Default.png" class="card-img" alt="week1">
             </div>
