html、css→版面配置修改 utilites.scss→vw、vh變更

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <h2 class="display-2 text-primary fw-bold ZigZag">活動說明
             <span class="d-block p-0"><img src="images/Icon/Zig Zag.svg" alt=""></span>
         </h2>
-        <main class="d-flex justify-content-around">
+        <main class="d-flex flex-column flex-sm-row flex-sm-wrap justify-content-center justify-content-sm-around p-3 mx-auto">
             <div class="card text-white bg-transparent mb-3" >
                 <div class="card-header h1 text-primary fw-bold">Step01</div>
                 <div class="card-body">
@@ -212,7 +212,7 @@
         <h2 class="display-2 text-white fw-bold">區區修煉已經無法滿足了嗎？<br />
             還有比賽等著你！</h2>
 
-        <main class="position-relative mt-5">
+        <main class="position-relative mt-5 vh-50">
             <div class="card trophy-card-bg rounded-20">
                 <div class="card-body position-relative d-flex flex-column justify-content-center rounded-20 bg-white">
                     <h5 class="card-title position-absolute top-0 start-0 fs-2 fw-bold rounded-20">
