--- a/index.html
+++ b/index.html
@@ -57,55 +57,55 @@
         <div class="mar">
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
                 <img src="images/Interactive Web design.png" alt="">
-                <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
-                <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
                 <img src="images/Interactive Web design.png" alt="">
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
                 <img src="images/Interactive Web design.png" alt="">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
                 <img src="images/Interactive Web design.png" alt="">
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
                 <img src="images/Interactive Web design.png" alt="">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
                 <img src="images/Interactive Web design.png" alt="">
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
                 <img src="images/Interactive Web design.png" alt="">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
                 <img src="images/Interactive Web design.png" alt="">
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
                 <img src="images/Interactive Web design.png" alt="">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
                 <img src="images/Interactive Web design.png" alt="">
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
                 <img src="images/Interactive Web design.png" alt="">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
                 <img src="images/Interactive Web design.png" alt="">
             </marquee>
             <marquee scrollamount="10" class="d-block w-100 m-3 py-0">
                 <img src="images/Interactive Web design.png" alt="">
-                 <span class="d-inline-block" style="width: 500px; height: 100%;"></span> 
+                <span class="d-inline-block" style="width: 500px; height: 100%;"></span>
             </marquee>
 
         </div>
@@ -150,13 +150,15 @@
         </main>
     </section>
 
+
     <!-- 網頁區塊 5： 活動說明 ****************************************** -->
     <section class="section5 text-center my-6  ">
         <h2 class="display-2 text-primary fw-bold ZigZag">活動說明
             <span class="d-block p-0"><img src="images/Icon/Zig Zag.svg" alt=""></span>
         </h2>
-        <main class="d-flex flex-column flex-sm-row flex-sm-wrap justify-content-center justify-content-sm-around p-3 mx-auto">
-            <div class="card text-white bg-transparent mb-3" >
+        <main
+            class="d-flex flex-column flex-md-row flex-md-wrap justify-content-center justify-content-sm-around p-3 mx-auto w-75 w-sm-50 w-md-100 w-xl-75">
+            <div class="card text-white bg-transparent mb-5 mb-md-3">
                 <div class="card-header h1 text-primary fw-bold">Step01</div>
                 <div class="card-body">
                     <img src="images/step1 pic.png" class="card-img" alt="Step01">
@@ -168,7 +170,7 @@
                     </p>
                 </div>
             </div>
-            <div class="card text-white bg-transparent mb-3" >
+            <div class="card text-white bg-transparent mb-5 mb-md-3">
                 <div class="card-header h1 text-primary fw-bold">Step02</div>
                 <div class="card-body">
                     <img src="images/step2 pic.png" class="card-img" alt="Step02">
@@ -179,7 +181,7 @@
                     </p>
                 </div>
             </div>
-            <div class="card text-white bg-transparent mb-3" >
+            <div class="card text-white bg-transparent mb-5 mb-md-3">
                 <div class="card-header h1 text-primary fw-bold">Step03</div>
                 <div class="card-body">
                     <img src="images/step3 pic.png" class="card-img" alt="Step03">
@@ -190,7 +192,7 @@
                     </p>
                 </div>
             </div>
-            <div class="card text-white bg-transparent mb-3" >
+            <div class="card text-white bg-transparent mb-5 mb-md-3">
                 <div class="card-header h1 text-primary fw-bold">Step04</div>
                 <div class="card-body">
                     <img src="images/step4 pic.png" class="card-img" alt="Step04">
@@ -212,7 +214,7 @@
         <h2 class="display-2 text-white fw-bold">區區修煉已經無法滿足了嗎？<br />
             還有比賽等著你！</h2>
 
-        <main class="position-relative mt-5 vh-50">
+        <main class="position-relative mt-5">
             <div class="card trophy-card-bg rounded-20">
                 <div class="card-body position-relative d-flex flex-column justify-content-center rounded-20 bg-white">
                     <h5 class="card-title position-absolute top-0 start-0 fs-2 fw-bold rounded-20">
@@ -223,7 +225,8 @@
                 </div>
             </div>
             <div class="card trophy-card-bg rounded-20">
-                <div class="card-body position-relative d-flex flex-column justify-content-center text-start rounded-20  bg-white">
+                <div
+                    class="card-body position-relative d-flex flex-column justify-content-center text-start rounded-20  bg-white">
                     <h5 class="card-title position-absolute top-0 end-0 fs-2 fw-bold rounded-20">
                         <span class="d-block bg-white rounded-20">獎項設計</span>
                     </h5>
@@ -245,15 +248,22 @@
         <div class="pic">
             <img src="images/Icon/Vector.png" alt="">
         </div>
-        <main>
-            <h2 class="display-2 text-primary fw-bold py-4 ms-5 ZigZag">鑽石級贊助商
+        <main class="w-100 w-md-75">
+            <h2 class="display-2 text-primary fw-bold py-sm-4 pt-4 ms-lg-5 ZigZag">鑽石級贊助商
                 <span class="d-block p-0"><img src="images/Icon/Zig Zag.svg" alt=""></span>
             </h2>
-            <div class="d-flex justify-content-evenly align-items-center flex-fill py-5 my-5">
-                <div class="pic"><img src="images/Ellipse 8.png" alt="KDAN"></div>
-                <div class="pic"><img src="images/titan_logo 1.png" alt="鈦坦科技"></div>
-                <div class="pic"><img src="images/blockstudio_logo.png" alt="板塊設計"></div>
+            <div class="d-flex justify-content-evenly align-items-center flex-fill py-lg-5 my-lg-5">
+                <div class="pic">
+                    <a href="https://www.kdanmobile.com/zh-tw"><img src="images/Ellipse 8.png" alt="KDAN"></a>
+                </div>
+                <div class="pic">
+                    <a href="https://titansoft.com/tw"><img src="images/titan_logo 1.png" alt="鈦坦科技"></a>
+                </div>
+                <div class="pic">
+                    <a href="https://blockstudio.tw/"><img src="images/blockstudio_logo.png" alt="板塊設計"></a>
+                </div>
             </div>
+
         </main>
 
     </section>
