--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 
 <body>
     <header class="d-flex justify-content-between">
-        <h1>
-            <a href="#">
-                <img src="images/the f2e 2.png" alt="the f2e logo">
-            </a>
-        </h1>
+        <a href="#" class="d-block">
+            <img src="images/the f2e 2.png" alt="the f2e logo">
+        </a>
         <nav class="nav align-items-center">
             <a class="nav-link fw-bold" href="#">關卡資訊</a>
             <a class="nav-link fw-bold" href="#">作品列表</a>
@@ -32,8 +30,14 @@
     </header>
 
     <!-- 網頁區塊 1 ：Banner ****************************************** -->
-    <section>
-
+    <section class="section1 p-0 vw-100 vh-100">
+        <div class="wrap position-relative">
+            <div class="wrapper position-absolute">
+                <img src="images/Group.png" alt="">
+                <h1 class="display-1 text-white"> THE F2E</h1>
+            </div>
+            <a href="#" class="btn btn-primary rounded-circle  position-absolute">立即<br>報名</a>
+        </div>
     </section>
 
     <!-- 網頁區塊 2 ：提出問題 ****************************************** -->
@@ -203,7 +207,6 @@
                     </p>
                 </div>
             </div>
-
         </main>
 
 
