section-1刪除，確定有問題

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <article id="fullpage">
         <!-- 導覽列 -->
-        <!-- <nav class="fixed-top d-flex justify-content-between align-items-center">
+        <header class="fixed-top d-flex justify-content-between align-items-center">
             <a href="#" class="d-block">
                 <img src="images/the f2e 2.png" alt="the f2e logo">
             </a>
@@ -28,11 +28,12 @@
                 <button class="btn btn-primary rounded-pill fw-bold mx-2 px-3 py-2">註冊報名</button>
                 <button class="btn btn-primary rounded-pill fw-bold mx-2 px-3 py-2">登入</button>
             </nav>
-        </nav> -->
+        </header>
 
 
         <!-- 網頁區塊 1 ：Banner ****************************************** -->
-        <section class="section section1 p-0 vw-100 vh-100">
+
+        <!-- <section class="section section1 p-0 vw-100 vh-100">
             <div class="wrap position-relative">
                 <div class="wrapper position-absolute">
                     <img src="images/Group.png" alt="">
@@ -40,7 +41,9 @@
                 </div>
                 <a href="#" class="btn btn-primary rounded-circle  position-absolute">立即<br>報名</a>
             </div>
-        </section>
+        </section> -->
+
+
         <!-- 網頁區塊 2 ：提出問題 ****************************************** -->
         <section class="section section2 d-flex flex-column m-5">
             <h2 class="display-2 text-primary text-center fw-bold">你是否也有以下困擾？</h2>
